# KVFinder-web-service

./: .gitignore  CONTRIBUTING.md  Caddyfile  README.md  README.org  README.org   README_PT.md  README_PT.org  docker-compose-bundle-https.yml  docker-compose-bundle.yml  docker-compose-shiny-https.yml  docker-compose-shiny.yml  docker-compose.yml  http_client.py  kvfinder-web.service  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
client/: .gitignore  client.py
kv/: Cargo.toml  Dockerfile-server  Dockerfile-worker
kv/src/: lib.rs
kv/src/kv/: webserver.rs  worker.rs
web-service/: Cargo.toml  Dockerfile-server  Dockerfile-worker
web-service/src/: lib.rs
web-service/src/kvweb/: queue.toml  webserver.rs  worker.rs
