[package]
name = "kv"
version = "0.2.0"
authors = ["jgcarvalho <Jose Geraldo>, jvsguerra <Joao Victor>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
fasthash = "0.4.0"
reqwest = "0.9.22"
serde = "1.0.101"
serde_json = "1.0"
toml = "0.5.5"
structopt = "0.3"
