[package]
name = "kvweb"
version = "0.5.0"
authors = [
    "Jose Geraldo de Carvalho Pereira <jose.pereira@lnbio.cnpem.br>, Joao Victor da Silva Guerra <joao.guerra@lnbio.cnpem.br>",
]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
fasthash = "0.4.0"
reqwest = "0.9"
serde = "1.0.152"
serde_json = "1.0.93"
toml = "0.7.2"
structopt = "0.3.26"
zstd = "0.12.3"
base64 = "0.21.0"
